--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon --delay 0.1 src/index.js",
+    "test": "jest -i",
     "lint": "eslint .",
-    "test": "jest -i"
+    "validate": "npm-run-all lint test:changes",
+    "test:changes": "jest -o"
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git@github.com:cemusta/lexical-challange.git"
   },
   "author": "",
   "license": "MIT",
@@ -28,11 +30,18 @@
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-jest": "^23.8.2",
+    "husky": "^4.2.5",
     "jest": "^25.4.0",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "npm-run-all": "^4.1.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run validate"
+    }
   }
 }
